fetch and return channel pic
