# docs/swagger.yaml
@@ -135,10 +135,18 @@ definitions:
     type: object
   ChannelResponse:
     properties:
+      avg_views:
+        type: integer
       id:
         type: integer
       is_listed:
         type: boolean
+      photo_big_url:
+        type: string
+      photo_small_url:
+        type: string
+      subscribers:
+        type: integer
       title:
         type: string
       username:
