# internal/dto/channel.go
@@ -12,10 +12,14 @@ const (
 )
 
 type ChannelResponse struct {
-	TgChannelID int64  `json:"id"`
-	Title       string `json:"title"`
-	Username    string `json:"username,omitempty"`
-	IsListed    bool   `json:"is_listed"`
+	TgChannelID   int64  `json:"id"`
+	Title         string `json:"title"`
+	Username      string `json:"username,omitempty"`
+	IsListed      bool   `json:"is_listed"`
+	PhotoSmallURL string `json:"photo_small_url,omitempty"`
+	PhotoBigURL   string `json:"photo_big_url,omitempty"`
+	Subscribers   *int   `json:"subscribers,omitempty"`
+	AvgViews      *int   `json:"avg_views,omitempty"`
 }
 
 type ChannelWithRoleResponse struct {
